--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,28 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-
+        {
+            "name":"call_asm gdb",
+            "type": "cppdbg",
+            "request":"launch",
+            "program": "${workspaceFolder}\\call.exe",
+            "MIMode": "gdb",
+            "miDebuggerPath":"C:\\Program Download\\MinGW-New\\mingw64\\bin\\gdb.exe",
+            "cwd":"${workspaceFolder}",                                                 // 不确定为什么这里就可以找打目录呢
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ],
+            "preLaunchTask":"call asm task before"   // 这里得改成 c 或者 asm 对应的task
+        },
         {
             "name":"test gdb",
             "type": "cppdbg",
