first int 0x80 system call added.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,7 @@
         "l_clock.h": "c",
         "l_assert.h": "c",
         "cmath": "c",
-        "l_memory.h": "c"
+        "l_memory.h": "c",
+        "l_debug.h": "c"
     }
 }
